--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 	</head>
 <body>
   <p id="message"></p>
-	<p id="videoTitle"></p>
+	<p id="videoTitle"><a></a><button>Refresh</button></p>
 	<div id="graphContainer" style="min-width: 400px; height: 200px; margin: 0 auto"></div>
 	<div>
 		<form id="language">
@@ -21,7 +21,7 @@
 	<p>
 		<a id="author"></a><a id="authorLink" href="http://jialiu54321.com/">@JiaLiu54321</a>
 	</p>
-	<p style="display:flex;align-items:center;"><img src="BiliBH_48.png"></img><a id="version">v0.0.1</a></p>	
+	<p style="display:flex;align-items:center;"><img src="BiliBH_48.png"></img><a id="version"></a></p>
 </body>
 <script src="jquery-2.2.4.js"></script>
 <script src="text.js"></script>
